# LearnedJoinDiskExp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Notes.md  README.md  ar_dataset_lookup_tests.sh  ar_equijoin_report.txt  ar_equijoin_tests.sh  eval_results.ipynb  extract_run.py  main.cpp  merge.cpp  merge.h  out  plr.cpp  plr.h  python_script.py  python_script_lookup.py  run.py  run.sh  run_all.sh  run_rest.sh  run_small.sh  run_unsorted.sh  run_unsorted_alex.sh  shell_script.sh  sort_join.sh  test_interfaces.cpp  uniform_dataset_equijoin_tests.sh  uniform_dataset_lookup_tests copy.sh  uniform_dataset_lookup_tests.sh
benchmark/: benchmark_runner.py  run_all.py  run_all.sh  run_indexes.py  run_join-onelevel.sh  run_join-ratio10.sh  run_join-search.sh  run_join.sh  run_join_4.sh  run_merge-ratio10.sh  run_merge.sh  run_merge_4.sh  run_small.sh  run_small_4.sh  run_string.py  sosd_index.jsonnet  sosd_join-onelevel.jsonnet  sosd_join.jsonnet  sosd_join_small.jsonnet  sosd_merge.jsonnet  sosd_merge_small.jsonnet  string_join.jsonnet  string_merge.jsonnet  test.jsonnet  ur_uint64_join.jsonnet  ur_uint64_merge.jsonnet
benchmark/common/: input_util.libsonnet  join_algos.libsonnet  merge_algos.libsonnet
benchmark/dataset_ar/: ar_join_disk_all.json  ar_join_disk_low.json  ar_merge_disk.json  ar_merge_disk_stats.json  common.libsonnet  join_all_sel.json  join_disk_all.json  join_disk_low.json  join_disk_low_4threads.jsonnet  join_low_sel.json  merge_disk.json  merge_disk_linear_4threads.jsonnet  merge_disk_linear_stats.jsonnet  merge_disk_stats.json  run_all.sh
benchmark/dataset_books/: common.libsonnet  join_disk_all.json  join_disk_low.json  join_disk_low.jsonnet  merge_disk.json  merge_disk_stats.json
benchmark/dataset_fb/: common.libsonnet  join_disk_all.json  join_disk_all.jsonnet  join_disk_all_4.jsonnet  join_disk_low.json  merge_disk.json  merge_disk_stats.json
benchmark/dataset_osm/: common.libsonnet  join_disk_all.json  join_disk_all.jsonnet  join_disk_all_4.jsonnet  join_disk_low.json  merge_disk.json  merge_disk_linear_4.jsonnet  merge_disk_stats.json
benchmark/dataset_ur_16byte/: 16byte_join_disk_low.json  16byte_merge_disk_linear.json  16byte_merge_disk_linear_stats.json  common.libsonnet  join_disk_low.json  join_disk_low.jsonnet  join_disk_low_4thread.jsonnet  merge_disk.json  merge_disk_stats.json
benchmark/dataset_ur_uint64/: common.libsonnet  join_disk_check_disk_io_count.jsonnet  join_disk_error_study.jsonnet  join_disk_index_build_study.jsonnet  join_disk_low.jsonnet  join_disk_low_4threads.jsonnet  merge_disk_linear.jsonnet  merge_disk_linear_4threads.jsonnet  merge_disk_linear_4threads_small.jsonnet  ur64_join_disk_low.json  ur64_join_disk_low.jsonnet  ur64_merge_disk.json  ur64_merge_disk_linear.json  ur64_merge_disk_linear_stats.json  ur64_merge_disk_stats.json
benchmark/dataset_wiki/: common.libsonnet  join_disk_all.json  join_disk_all.jsonnet  join_disk_all_4threads.jsonnet  join_disk_low.json  join_disk_low.jsonnet  join_disk_low_4threads.jsonnet  merge_disk.json  merge_disk_linear.jsonnet  merge_disk_stats.json
benchmark/others/: sosd_join_debug.jsonnet  (+4 more)
benchmarks_specs/: uniform_random.json  wiki_self_join.json
betree/: test.cpp
eval/: README.md  eval_results.ipynb  parse_results.py  run_10M_3.txt
evaluation/: python_script.py
experiments/: index_stats.sh  join_hdd.sh  join_ssd.sh  join_threads.sh  merge_ssd.sh
include/: benchmark_spec.h  comparator.h  config.h  int_iterator.h  iterator.h  learned_lookup.h  learned_merge.h  learned_merge_trust_bounds.h  merge.h  merge_result_builder.h  plr.h  slice.h  slice_array.h  slice_array_iterator.h  slice_comparator.h  slice_file_iterator.h  slice_iterator.h  sort.h  sstable.h  standard_lookup.h  standard_merge.h  uniform_random.h
rmi/: books_800M_uint64_0.cpp  books_800M_uint64_0.h  books_800M_uint64_0_data.h  fb_200M_uint64_0.cpp  fb_200M_uint64_0.h  fb_200M_uint64_0_data.h  lognormal_200M_uint64_0.cpp  lognormal_200M_uint64_0.h  lognormal_200M_uint64_0_data.h  lognormal_200M_uint64_2.cpp  lognormal_200M_uint64_2.h  lognormal_200M_uint64_2_data.h  normal_200M_uint64_0.cpp  normal_200M_uint64_0.h  normal_200M_uint64_0_data.h  normal_200M_uint64_3.cpp  normal_200M_uint64_3.h  normal_200M_uint64_3_data.h  osm_cellids_800M_uint64_0.cpp  osm_cellids_800M_uint64_0.h  osm_cellids_800M_uint64_0_data.h  uniform_dense_200M_uint64_0.cpp  uniform_dense_200M_uint64_0.h  uniform_dense_200M_uint64_0_data.h  uniform_dense_200M_uint64_8.cpp  uniform_dense_200M_uint64_8.h  uniform_dense_200M_uint64_8_data.h  uniform_sparse_200M_uint64_0.cpp  uniform_sparse_200M_uint64_0.h  uniform_sparse_200M_uint64_0_data.h  wiki_ts_200M_uint64_0.cpp  wiki_ts_200M_uint64_0.h  wiki_ts_200M_uint64_0_data.h  wiki_ts_200M_uint64_1.cpp  wiki_ts_200M_uint64_1.h  wiki_ts_200M_uint64_1_data.h
scripts/: ar_extract.py  benchmark.py  benchmark_runner.py  check_sstable.py  format.sh  gen_report.py  grouped_report.ipynb  index_report.ipynb  join_100_threadStudy.csv  join_10_threadStudy.csv  join_50_threadStudy.csv  merge_100_threadStudy.csv  merge_10_threadStudy.csv  merge_50_threadStudy.csv  mergejoin_report.ipynb  move_experiment_data.py  output_diff.py  report.ipynb  run.py  sstable_debug.ipynb  threadsRatio10  threadsRatio10.csv
src/: benchmark.cpp  benchmark_lookup.cpp  benchmark_pgm.cpp  benchmark_runner.cpp  binary_search.cpp  pgm_index.cpp  plr.cpp  plr_model.cpp  slice_array.cpp  slice_array_iterator.cpp  slice_file_iterator.cpp  slice_iterator.cpp  test_runner.cpp
test/: disk_sstable_test.cpp  in_mem_sstable.cpp  in_mem_sstable_test.cpp  index_test.cpp  merge_test.cpp  synthetic_gen_test.cpp  test_runner.cpp
test_bin/: benchmark
tests/: test_interfaces  test_interfaces.cpp  test_learned_merger.cpp  test_slice_comparator.cpp  test_slice_file_iterator.cpp
wiki/: 16_byte_join.md  16_byte_merge.md  32_byte_join.md  32_byte_merge.md  8_byte_join.md  8_byte_merge.md  experiments.md  index.md  prior_work.md
(+342 files in other folders)
